refactor/fix/feat altera nome de variaveis pouco descritivas, corrige testes que estavam falhando devido a novas implementações, implementa novos testes