@@ -1,4 +1,4 @@
-package com.pedropaulo.minhas_financas.service.impl;
+package com.pedropaulo.minhas_financas.service;
 
 import com.pedropaulo.minhas_financas.api.dto.CategoriaDTO;
 import com.pedropaulo.minhas_financas.exception.RegraNegocioException;
@@ -6,7 +6,7 @@ import com.pedropaulo.minhas_financas.model.entity.Categoria;
 import com.pedropaulo.minhas_financas.model.entity.Usuario;
 import com.pedropaulo.minhas_financas.model.repository.CategoriaRepository;
 import com.pedropaulo.minhas_financas.model.repository.LancamentoRepository;
-import com.pedropaulo.minhas_financas.service.UsuarioService;
+import com.pedropaulo.minhas_financas.service.impl.CategoriaServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,7 +18,7 @@ import org.mockito.quality.Strictness;
 import org.springframework.data.domain.Example;
 import org.springframework.security.core.Authentication;
 
-import java.util.*;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
@@ -49,57 +49,23 @@ class CategoriaServiceTest {
 		service = new CategoriaServiceImpl(repository, usuarioService, lancamentoRepository);
 	}
 
-	@Test
-	void buscarOuCriarCategorias_quandoListaNulaOuVazia_retornaVazio() throws Exception {
-		assertThat(service.buscarOuCriarCategorias(null, authentication)).isEmpty();
-		assertThat(service.buscarOuCriarCategorias(Collections.emptyList(), authentication)).isEmpty();
-		then(usuarioService).shouldHaveNoInteractions();
-		then(repository).shouldHaveNoInteractions();
-	}
-
-	@Test
-	void buscarOuCriarCategorias_quandoExistemAlgumas_criaOutrasSalvaETrazTodas() throws Exception {
-		given(authentication.getName()).willReturn(EMAIL);
-		Usuario usuario = new Usuario();
-		usuario.setId(1L);
-		usuario.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
-
-		Categoria existente = Categoria.builder().id(10L).nome("Mercado").usuario(usuario).build();
-		given(repository.findByNomeAndUsuario(eq("Mercado"), eq(usuario))).willReturn(Optional.of(existente));
-		given(repository.findByNomeAndUsuario(eq("Transporte"), eq(usuario))).willReturn(Optional.empty());
-
-		Categoria criado = Categoria.builder().id(11L).nome("Transporte").usuario(usuario).build();
-		given(repository.save(any(Categoria.class))).willReturn(criado);
-
-		Set<Categoria> out = service.buscarOuCriarCategorias(Arrays.asList("Mercado", "Transporte"), authentication);
-
-		assertThat(out).extracting(Categoria::getNome).containsExactlyInAnyOrder("Mercado", "Transporte");
-
-		ArgumentCaptor<Categoria> cap = ArgumentCaptor.forClass(Categoria.class);
-		then(repository).should().save(cap.capture());
-		assertThat(cap.getValue().getNome()).isEqualTo("Transporte");
-		assertThat(cap.getValue().getUsuario()).isEqualTo(usuario);
-		then(repository).should(times(1)).save(any(Categoria.class));
-		then(repository).shouldHaveNoMoreInteractions();
-	}
-
+	// -------- buscarPorNome --------
 	@Test
 	void buscarPorNome_quandoEncontra_retornaLista() throws Exception {
 		Categoria filtro = new Categoria();
-		Categoria c = new Categoria();
-		c.setId(1L);
-		c.setNome("Saúde");
-		given(repository.findAll(any(Example.class))).willReturn(Collections.singletonList(c));
+		Categoria categoriaEncontrada = new Categoria();
+		categoriaEncontrada.setId(1L);
+		categoriaEncontrada.setNome("Saúde");
+		given(repository.findAll(any(Example.class))).willReturn(java.util.List.of(categoriaEncontrada));
 
-		assertThat(service.buscarPorNome(filtro)).containsExactly(c);
+		assertThat(service.buscarPorNome(filtro)).containsExactly(categoriaEncontrada);
 		then(repository).should().findAll(any(Example.class));
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void buscarPorNome_quandoNaoEncontra_lancaExcecao() throws Exception {
-		given(repository.findAll(any(Example.class))).willReturn(Collections.emptyList());
+		given(repository.findAll(any(Example.class))).willReturn(java.util.List.of());
 		Categoria filtro = new Categoria();
 
 		Throwable t = catchThrowable(() -> service.buscarPorNome(filtro));
@@ -109,78 +75,93 @@ class CategoriaServiceTest {
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
+	// -------- validar --------
 	@Test
 	void validar_quandoDuplicado_lancaExcecao() throws Exception {
-		Usuario u = new Usuario();
-		u.setId(1L);
-		Categoria c = new Categoria();
-		c.setNome("Lazer");
-		c.setUsuario(u);
-		given(repository.findByNomeIgnoreCaseAndUsuario("Lazer", u)).willReturn(Optional.of(new Categoria()));
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		Categoria categoria = new Categoria();
+		categoria.setNome("Lazer");
+		categoria.setUsuario(usuario);
+		given(repository.findByNomeIgnoreCaseAndUsuario("Lazer", usuario)).willReturn(Optional.of(new Categoria()));
 
-		Throwable t = catchThrowable(() -> service.validar(c));
-		assertThat(t).isInstanceOf(RegraNegocioException.class).hasMessage("Uma categoria com esse nome já existe");
-		then(repository).should().findByNomeIgnoreCaseAndUsuario("Lazer", u);
+		Throwable erro = catchThrowable(() -> service.validar(categoria));
+		assertThat(erro).isInstanceOf(RegraNegocioException.class).hasMessage("Uma categoria com esse nome já existe");
+		then(repository).should().findByNomeIgnoreCaseAndUsuario("Lazer", usuario);
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void validar_quandoNomeInvalido_lancaExcecao() throws Exception {
-		Usuario u = new Usuario();
-		u.setId(1L);
-		Categoria c = new Categoria();
-		c.setUsuario(u);
-		c.setNome("  ");
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		Categoria categoria = new Categoria();
+		categoria.setUsuario(usuario);
+		categoria.setNome("  ");
 		given(repository.findByNomeIgnoreCaseAndUsuario(anyString(), any())).willReturn(Optional.empty());
 
-		Throwable t = catchThrowable(() -> service.validar(c));
-		assertThat(t).isInstanceOf(RegraNegocioException.class).hasMessage("Insira uma nome válido.");
+		Throwable erro = catchThrowable(() -> service.validar(categoria));
+		assertThat(erro).isInstanceOf(RegraNegocioException.class).hasMessage("Insira uma nome válido.");
 		then(repository).should().findByNomeIgnoreCaseAndUsuario(anyString(), any());
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void validar_quandoValido_naoLanca() throws Exception {
-		Usuario u = new Usuario();
-		u.setId(1L);
-		Categoria c = new Categoria();
-		c.setUsuario(u);
-		c.setNome("Educação");
-		given(repository.findByNomeIgnoreCaseAndUsuario("Educação", u)).willReturn(Optional.empty());
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		Categoria categoria = new Categoria();
+		categoria.setUsuario(usuario);
+		categoria.setNome("Educação");
+		given(repository.findByNomeIgnoreCaseAndUsuario("Educação", usuario)).willReturn(Optional.empty());
 
-		assertThatCode(() -> service.validar(c)).doesNotThrowAnyException();
-		then(repository).should().findByNomeIgnoreCaseAndUsuario("Educação", u);
+		assertThatCode(() -> service.validar(categoria)).doesNotThrowAnyException();
+		then(repository).should().findByNomeIgnoreCaseAndUsuario("Educação", usuario);
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
+	// -------- salvar (DTO, Authentication) --------
 	@Test
 	void salvar_invocaValidarESalva() throws Exception {
-		Usuario u = new Usuario();
-		u.setId(1L);
-		Categoria c = new Categoria();
-		c.setUsuario(u);
-		c.setNome("Viagem");
-		given(repository.findByNomeIgnoreCaseAndUsuario("Viagem", u)).willReturn(Optional.empty());
+		given(authentication.getName()).willReturn(EMAIL);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
+
+		CategoriaDTO dto = new CategoriaDTO();
+		dto.setNome("Viagem");
+
+		// não duplicado
+		given(repository.findByNomeIgnoreCaseAndUsuario("Viagem", usuario)).willReturn(Optional.empty());
+
 		Categoria salvo = new Categoria();
 		salvo.setId(5L);
 		salvo.setNome("Viagem");
-		given(repository.save(c)).willReturn(salvo);
+		salvo.setUsuario(usuario);
+		given(repository.save(any(Categoria.class))).willReturn(salvo);
 
-		Categoria out = service.salvar(c);
+		Categoria out = service.salvar(dto, authentication);
 
 		assertThat(out).isEqualTo(salvo);
-		then(repository).should().findByNomeIgnoreCaseAndUsuario("Viagem", u);
-		then(repository).should().save(c);
+
+		ArgumentCaptor<Categoria> cap = ArgumentCaptor.forClass(Categoria.class);
+		then(repository).should().save(cap.capture());
+		assertThat(cap.getValue().getNome()).isEqualTo("Viagem");
+		assertThat(cap.getValue().getUsuario()).isEqualTo(usuario);
+
+		then(repository).should().findByNomeIgnoreCaseAndUsuario("Viagem", usuario);
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
+	// -------- atualizar (id, Authentication, DTO) --------
 	@Test
 	void atualizar_quandoNaoExiste_lancaExcecao() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(1L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 		given(repository.findByIdAndUsuario_Id(99L, 1L)).willReturn(Optional.empty());
 
 		CategoriaDTO dto = new CategoriaDTO();
@@ -196,14 +177,14 @@ class CategoriaServiceTest {
 	@Test
 	void atualizar_quandoNomeInvalido_lancaExcecao() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(1L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
 		Categoria existente = new Categoria();
 		existente.setId(3L);
-		existente.setUsuario(u);
+		existente.setUsuario(usuario);
 		existente.setNome("Antigo");
 		given(repository.findByIdAndUsuario_Id(3L, 1L)).willReturn(Optional.of(existente));
 
@@ -219,14 +200,14 @@ class CategoriaServiceTest {
 	@Test
 	void atualizar_sucesso_salvaEDepoisRetornaSalvo() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(1L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
 		Categoria existente = new Categoria();
 		existente.setId(3L);
-		existente.setUsuario(u);
+		existente.setUsuario(usuario);
 		existente.setNome("Antigo");
 
 		given(repository.findByIdAndUsuario_Id(3L, 1L)).willReturn(Optional.of(existente));
@@ -245,63 +226,66 @@ class CategoriaServiceTest {
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
+	// -------- converterDTO --------
 	@Test
 	void converterDTO_mapeiaCampos() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(2L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(2L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
 		CategoriaDTO dto = new CategoriaDTO();
 		dto.setNome("Casa");
 
-		Categoria c = service.converterDTO(dto, authentication);
+		Categoria categoria = service.converterDTO(dto, authentication);
 
-		assertThat(c.getNome()).isEqualTo("Casa");
-		assertThat(c.getUsuario()).isEqualTo(u);
+		assertThat(categoria.getNome()).isEqualTo("Casa");
+		assertThat(categoria.getUsuario()).isEqualTo(usuario);
 		then(usuarioService).should().obterIdUsuarioPorEmail(EMAIL);
 		then(repository).shouldHaveNoInteractions();
 	}
 
+	// -------- obterPorIdCategoria --------
 	@Test
 	void obterPorIdCategoria_repassaIdDoUsuario() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(7L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(7L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
-		Categoria c = new Categoria();
-		c.setId(15L);
-		c.setUsuario(u);
-		given(repository.findByIdAndUsuario_Id(15L, 7L)).willReturn(Optional.of(c));
+		Categoria categoria = new Categoria();
+		categoria.setId(15L);
+		categoria.setUsuario(usuario);
+		given(repository.findByIdAndUsuario_Id(15L, 7L)).willReturn(Optional.of(categoria));
 
 		Optional<Categoria> out = service.obterPorIdCategoria(15L, authentication);
 
-		assertThat(out).contains(c);
+		assertThat(out).contains(categoria);
 		then(repository).should().findByIdAndUsuario_Id(15L, 7L);
 		then(repository).shouldHaveNoMoreInteractions();
 	}
 
+	// -------- deletar --------
 	@Test
 	void deletar_quandoEmUso_lancaExcecaoComQuantidade() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(1L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
-		Categoria c = new Categoria();
-		c.setId(20L);
-		c.setUsuario(u);
-		c.setNome("X");
-		given(repository.findByIdAndUsuario_Id(20L, 1L)).willReturn(Optional.of(c));
+		Categoria categoria = new Categoria();
+		categoria.setId(20L);
+		categoria.setUsuario(usuario);
+		categoria.setNome("X");
+		given(repository.findByIdAndUsuario_Id(20L, 1L)).willReturn(Optional.of(categoria));
 		given(lancamentoRepository.existsByCategorias_Id(20L)).willReturn(true);
 		given(lancamentoRepository.countByCategorias_Id(20L)).willReturn(3L);
 
-		Throwable t = catchThrowable(() -> service.deletar(20L, authentication));
-		assertThat(t).isInstanceOf(RegraNegocioException.class)
+		Throwable erro = catchThrowable(() -> service.deletar(20L, authentication));
+		assertThat(erro).isInstanceOf(RegraNegocioException.class)
 			.hasMessage("Não é possível excluir: a categoria está vinculada a 3 lançamento(s).");
 		then(repository).should(never()).delete(any());
 		then(lancamentoRepository).should().existsByCategorias_Id(20L);
@@ -312,21 +296,21 @@ class CategoriaServiceTest {
 	@Test
 	void deletar_quandoNaoEmUso_exclui() throws Exception {
 		given(authentication.getName()).willReturn(EMAIL);
-		Usuario u = new Usuario();
-		u.setId(1L);
-		u.setEmail(EMAIL);
-		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(u);
+		Usuario usuario = new Usuario();
+		usuario.setId(1L);
+		usuario.setEmail(EMAIL);
+		given(usuarioService.obterIdUsuarioPorEmail(EMAIL)).willReturn(usuario);
 
-		Categoria c = new Categoria();
-		c.setId(21L);
-		c.setUsuario(u);
-		c.setNome("Y");
-		given(repository.findByIdAndUsuario_Id(21L, 1L)).willReturn(Optional.of(c));
+		Categoria categoria = new Categoria();
+		categoria.setId(21L);
+		categoria.setUsuario(usuario);
+		categoria.setNome("Y");
+		given(repository.findByIdAndUsuario_Id(21L, 1L)).willReturn(Optional.of(categoria));
 		given(lancamentoRepository.existsByCategorias_Id(21L)).willReturn(false);
 
 		service.deletar(21L, authentication);
 
-		then(repository).should().delete(c);
+		then(repository).should().delete(categoria);
 		then(lancamentoRepository).should().existsByCategorias_Id(21L);
 		then(repository).shouldHaveNoMoreInteractions();
 		then(lancamentoRepository).shouldHaveNoMoreInteractions();
